; ModuleID = '/home/carl/AnghaBench/postgres/src/bin/initdb/extr_initdb.c_pretty_wal_size.c'
source_filename = "/home/carl/AnghaBench/postgres/src/bin/initdb/extr_initdb.c_pretty_wal_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@wal_segment_size_mb = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"%dGB\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"%dMB\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @pretty_wal_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @pretty_wal_size(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* @wal_segment_size_mb, align 4
  %6 = load i32, i32* %2, align 4
  %7 = mul nsw i32 %5, %6
  store i32 %7, i32* %3, align 4
  %8 = call i8* @pg_malloc(i32 14)
  store i8* %8, i8** %4, align 8
  %9 = load i32, i32* %3, align 4
  %10 = srem i32 %9, 1024
  %11 = icmp eq i32 %10, 0
  br i1 %11, label %12, label %17

12:                                               ; preds = %1
  %13 = load i8*, i8** %4, align 8
  %14 = load i32, i32* %3, align 4
  %15 = sdiv i32 %14, 1024
  %16 = call i32 @snprintf(i8* %13, i32 14, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %15)
  br label %21

17:                                               ; preds = %1
  %18 = load i8*, i8** %4, align 8
  %19 = load i32, i32* %3, align 4
  %20 = call i32 @snprintf(i8* %18, i32 14, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i32 %19)
  br label %21

21:                                               ; preds = %17, %12
  %22 = load i8*, i8** %4, align 8
  ret i8* %22
}

declare dso_local i8* @pg_malloc(i32) #1

declare dso_local i32 @snprintf(i8*, i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
